@@ -30,7 +30,7 @@ $l["field"]= 'Fält';
 $l["contains"]= 'Innehåller';
 $l["moveToFolder"]= 'Flytta till mapp';
 $l["incomingMail"]= 'Inkommande e-post';
-$l["advanced"]= 'Avancerad';
+$l["advanced"]= 'Avancerat';
 $l["ssl"]= 'SSL';
 $l["tls"]= 'TLS';
 $l["novalidateCert"]='Validera inte certifikat';
@@ -40,10 +40,10 @@ $l["manageFolders"]= 'Hantera mappar';
 $l["sendItemsFolder"]= 'Mappen Skickat';
 $l["trashFolder"]= 'Mappen Papperskorg';
 $l["draftsFolder"]= 'Mappen Utkast';
-$l["sender"]= 'Från-fält';
-$l["toField"]= 'Till-fält';
-$l["ccField"]= 'Kopia-fält (CC)';
-$l["bccField"]= 'Dold kopia-fält (BCC)';
+$l["sender"]= 'Från';
+$l["toField"]= 'Till';
+$l["ccField"]= 'Kopia (CC)';
+$l["bccField"]= 'Dold kopia (BCC)';
 $l["keyword"]= 'Nyckelord';
 $l["notification"]= 'Begär läskvitto';
 $l["high"]= 'Hög';
@@ -126,10 +126,10 @@ $l["searchTo"]='Mottagare';
 $l["searchCC"]='Mottagare (Kopia)';
 $l["youHaveNewMails"]= 'Du har {new} olästa meddelande(n)';
 $l["replaceEmailText"]='Denna kontakt har redan tre mejladresser i sin profil. Du kan byta ut en av de befintliga adresserna nedan genom att klicka på mejladressen du vill byta.';
-$l["skipUnknownRecipientsAction"]='Visa inte detta förnster nästa gång';
+$l["skipUnknownRecipientsAction"]='Visa inte detta fönster nästa gång';
 $l["skipUnknownRecipients"]='Visa inte dialogen för okända mottagare';
-$l["alwaysRequestNotification"]='Begär alltid läsbekräftelse';
-$l["alwaysRespondToNotifications"]='Svara alltid på en begäran om läsbekräftelse';
+$l["alwaysRequestNotification"]='Begär alltid läskvitto';
+$l["alwaysRespondToNotifications"]='Svara alltid på en begäran om läskvitto';
 $l["icalendarUpdateEvent"]='Uppdatera händelse';
 $l["icalendarDeleteEvent"]='Radera händelse';
 $l["icalendarAcceptInvitation"]='Acceptera';
@@ -250,3 +250,7 @@ $l['selectValidMailFolder']="Vänligen välj en giltig e-postmapp att kopiera ti
 $l['clickSeeWholeMessage']="Meddelandet är för stort för att visa här. Klicka här för att se hela meddelandet.";
 $l['dateReceived']='Mottaget';
 $l['dateSent']='Skickat';
+
+$l['cronEmailReminders']='Påminnelser via e-post';
+$l['cronEmailRemindersDescription']='Denna cron hanterar påminnelser via e-post';
+$l['appointementAlreadyProcessed']='Detta meddelande innehåller en mötesinbjudan';
