@@ -29,12 +29,12 @@ $l["filterset"]= 'Filteruppsättning:';
 $l["days"]= 'Svara var x:e dag';
 $l["sendToAddresses"]='Skicka e-post till dessa e-postadresser';
 $l["addressesLabel"]= 'Skicka e-post till dessa e-postadresser (separerade av komma)';
-$l["addressesLabelOptional"]= '(valfritt) Aktivera även för dessa alias (separerade av komma)';
+$l["addressesLabelOptional"]= 'Aktivera för alias (separerade av komma). Här måste din e-postadress finnas med.';
 $l["reason"]= 'Meddelande';
 $l["allfollowingrules"]= 'som uppfyller följande regler';
 $l["somefollowingrules"]= 'som uppfyller en av följande regler';
 $l["allmessages"]= 'all e-post';
-$l["disablefilter"]= 'Avaktivera filter';
+$l["disablefilter"]= 'Inaktivera filter';
 $l["newsieverule"]= 'Ny regel';
 $l["checksieveerror"]= 'Fel vid kontroll av stöd för sieve';
 $l["erroremptygrids"]= 'En eller flera rutor är tomma.';
@@ -53,8 +53,8 @@ $l["fileinto"]= 'Flytta meddelande till mappen';
 $l["fileintoLabel"]= 'Flytta e-post till vald mapp';
 $l["copyto"]= 'Kopiera meddelande till mappen';
 $l["copytoLabel"]= 'Kopiera e-post till vald mapp';
-$l["redirect_to"]= 'Vidarebefordra till';
-$l["redirect_copy_to"]= 'Kopiera till e-post';
+$l["redirect_to"]= 'Omdirigera till';
+$l["redirect_copy_to"]= 'Skicka kopia till';
 $l["vacation"]= 'Semester';
 $l["reject"]= 'Avvisa med meddelande';
 $l["toFolder"]= 'Till mapp';
